--- a/notebooks/ahp_capex_example.ipynb
+++ b/notebooks/ahp_capex_example.ipynb
@@ -345,7 +345,7 @@
     "print(\"NumPy   :\", numpy.__version__)\n",
     "print(\"Pandas  :\", pandas.__version__)\n",
     "print(\"Matplotlib:\", matplotlib.__version__)\n",
-    "print(\"Repo & docs: https://github.com/<yourusername>/ahp-wte-model\")"
+    "print(\"Repo & docs: https://github.com/<shivaraj94patil>/ahp-wte-model\")"
    ]
   },
   {
