--- a/notebooks/ahp_capex_example.ipynb
+++ b/notebooks/ahp_capex_example.ipynb
@@ -335,7 +335,7 @@
       "NumPy   : 2.3.2\n",
       "Pandas  : 2.3.1\n",
       "Matplotlib: 3.10.5\n",
-      "Repo & docs: https://github.com/<yourusername>/ahp-wte-model\n"
+      "Repo & docs: https://github.com/<shivaraj94patil>/ahp-wte-model\n"
      ]
     }
    ],
